fix issue where video/3D media won't open on mobile

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1158,13 +1158,10 @@ a.product__text {
   cursor: zoom-in;
 }
 
-.product__media-zoom-none {
-  display: none;
-}
-
-.product__media-icon--none {
-  display: none;
-}
+.product__modal-opener--image .product__media-zoom-none,
+	.product__media-icon--none {
+	  display: none;
+	}
 
 @media (hover: hover) {
   .product__media-zoom-hover {
